force-app/main/default/objects/Product2/fields/Cross_Org_Error__c.field-meta.xml
<CustomField>
    <fullName>Cross_Org_Error__c</fullName>
    <label>Cross_Org_Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>