force-app/main/default/objects/Product2/fields/Target_PBE_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_PBE_Id__c</fullName>
    <label>Target PBE Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>