force-app/main/default/objects/Product2/fields/Target_Product2_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Product2_Id__c</fullName>
    <label>Target Product2 Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>